[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Yellow/Sp_StaticEnemy_Yellow_8.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Blue/Sp_StaticEnemy_Blue_4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Yellow/Sp_StaticEnemy_Yellow_7.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Blue/Sp_StaticEnemy_Blue_6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Yellow/Sp_StaticEnemy_Yellow_3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Yellow/Sp_StaticEnemy_Yellow_4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Blue/Sp_StaticEnemy_Blue_5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Blue/Sp_StaticEnemy_Blue_3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Blue/Sp_StaticEnemy_Blue_8.png" type="Texture" id=9]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Red/Sp_StaticEnemy_Red_4.png" type="Texture" id=10]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Red/Sp_StaticEnemy_Red_5.png" type="Texture" id=11]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Blue/Sp_StaticEnemy_Blue_2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Yellow/Sp_StaticEnemy_Yellow_6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Blue/Sp_StaticEnemy_Blue_1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Blue/Sp_StaticEnemy_Blue_7.png" type="Texture" id=15]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Yellow/Sp_StaticEnemy_Yellow_5.png" type="Texture" id=16]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Red/Sp_StaticEnemy_Red_2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Yellow/Sp_StaticEnemy_Yellow_1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Yellow/Sp_StaticEnemy_Yellow_2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Red/Sp_StaticEnemy_Red_7.png" type="Texture" id=20]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Red/Sp_StaticEnemy_Red_6.png" type="Texture" id=21]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Red/Sp_StaticEnemy_Red_8.png" type="Texture" id=22]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Red/Sp_StaticEnemy_Red_3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Characters/Enemies/StaticEnemies/Red/Sp_StaticEnemy_Red_1.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Characters/Enemy/EnemyRotatingSprite.gd" type="Script" id=25]
[ext_resource path="res://General Scripts/ColorSpriteManager.gd" type="Script" id=26]
[ext_resource path="res://Scenes/Characters/Enemy/HealingEnemy/Sc_HealingEnemy.gd" type="Script" id=27]
[ext_resource path="res://Scenes/Characters/Particles/DeathParticles.tscn" type="PackedScene" id=29]
[ext_resource path="res://Placeholders/General/Sp_Placeholder_white.png" type="Texture" id=30]
[ext_resource path="res://Scenes/Characters/Enemy/EnemyHealth.gd" type="Script" id=31]
[ext_resource path="res://Scenes/VFX/FrozenFeedBack.tscn" type="PackedScene" id=32]

[sub_resource type="CircleShape2D" id=3]
radius = 19.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 9 ) ],
"loop": true,
"name": "Blue",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 17 ), ExtResource( 23 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "Red",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Yellow",
"speed": 5.0
} ]

[node name="Enemy" type="StaticBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 27 )
deathParticles = ExtResource( 29 )
health = 250.0
healingAmount = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 5

[node name="ColorAndSpriteHolder" type="Node2D" parent="."]
script = ExtResource( 26 )
blue = NodePath("Blue")
red = NodePath("Red")
yellow = NodePath("Yellow")

[node name="Blue" type="AnimatedSprite" parent="ColorAndSpriteHolder"]
position = Vector2( 1, 1.25 )
scale = Vector2( 0.28125, 0.277344 )
frames = SubResource( 4 )
animation = "Blue"
script = ExtResource( 25 )

[node name="Red" type="AnimatedSprite" parent="ColorAndSpriteHolder"]
visible = false
position = Vector2( 1, 1.25 )
scale = Vector2( 0.28125, 0.277344 )
frames = SubResource( 6 )
animation = "Red"
script = ExtResource( 25 )

[node name="Yellow" type="AnimatedSprite" parent="ColorAndSpriteHolder"]
visible = false
position = Vector2( 1, 1.25 )
scale = Vector2( 0.28125, 0.277344 )
frames = SubResource( 7 )
animation = "Yellow"
script = ExtResource( 25 )

[node name="EnemyHealth" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 31 )

[node name="Healthbar" type="TextureProgress" parent="EnemyHealth"]
margin_left = -9.33333
margin_top = -23.3333
margin_right = 9.66667
margin_bottom = -19.3333
value = 50.0
texture_under = ExtResource( 30 )
texture_progress = ExtResource( 30 )
tint_under = Color( 1, 1, 1, 0.392157 )
tint_progress = Color( 1, 0, 0, 0.392157 )
nine_patch_stretch = true

[node name="Timer" type="Timer" parent="EnemyHealth"]
wait_time = 2.0

[node name="FrozenFeedback" parent="." instance=ExtResource( 32 )]
visible = false

[node name="HealingTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="EnemyHealth/Timer" to="EnemyHealth" method="_on_Timer_timeout"]
[connection signal="timeout" from="HealingTimer" to="." method="_on_HealingTimer_timeout"]
